# Oxy

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DIAGNOSTICS_OVERHAUL_STATUS.md  Dockerfile  IR_CFG_JIT_FIX_PLAN.md  LANGUAGE_EVOLUTION_TRACKING.md  MISSION.md  README.md  docker-compose.yml  todo.fe  todo.ox
crates/ferrite-cli/: Cargo.toml
crates/ferrite-cli/src/: main.rs
crates/ferrite-cli/tests/: cli_test.rs
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/src/: errors.rs  lib.rs
crates/ferrite-core/src/ast/: mod.rs
crates/ferrite-core/src/env/: mod.rs
crates/ferrite-core/src/http/: mod.rs
crates/ferrite-core/src/interpreter/: db_dispatch.rs  format.rs  http.rs  json.rs  macros.rs  mod.rs  operations.rs  path.rs  pattern.rs  server_dispatch.rs
crates/ferrite-core/src/interpreter/methods/: hashmap.rs  mod.rs  option_result.rs  string.rs  vec.rs
crates/ferrite-core/src/json/: mod.rs
crates/ferrite-core/src/lexer/: mod.rs  token.rs
crates/ferrite-core/src/parser/: mod.rs
crates/ferrite-core/src/stdlib/: db.rs  fs.rs  math.rs  mod.rs  process.rs  rand.rs  regex.rs  server.rs  time.rs
crates/ferrite-core/src/types/: mod.rs
crates/ferrite-lsp/: Cargo.toml
crates/ferrite-lsp/src/: main.rs
crates/oxide-cli/: Cargo.toml
crates/oxide-cli/src/: main.rs
crates/oxide-cli/tests/: cli_test.rs
crates/oxide-core/: Cargo.toml
crates/oxide-core/src/: errors.rs  lib.rs
crates/oxide-core/src/ast/: mod.rs
crates/oxide-core/src/compiler/: mod.rs
crates/oxide-core/src/env/: mod.rs
crates/oxide-core/src/http/: mod.rs
crates/oxide-core/src/interpreter/: db_dispatch.rs  format.rs  json.rs  macros.rs  mod.rs  operations.rs  pattern.rs  register.rs  server_dispatch.rs
crates/oxide-core/src/interpreter/eval/: exprs.rs  mod.rs
crates/oxide-core/src/interpreter/methods/: hashmap.rs  mod.rs  string.rs  vec.rs
crates/oxide-core/src/json/: mod.rs
crates/oxide-core/src/lexer/: mod.rs  token.rs
crates/oxide-core/src/package/: mod.rs
crates/oxide-core/src/parser/: mod.rs
crates/oxide-core/src/stdlib/: db.rs  fs.rs  math.rs  mod.rs  net.rs  rand.rs  regex.rs  server.rs
crates/oxide-core/src/type_checker/: mod.rs  tests.rs
crates/oxide-core/src/types/: mod.rs
crates/oxide-core/src/vm/: mod.rs  tests.rs
crates/oxide-core/tests/: bench_fibonacci.rs
crates/oxide-lsp/: Cargo.toml
crates/oxide-lsp/src/: main.rs
crates/oxy-cli/: Cargo.toml  README.md
crates/oxy-cli/src/: main.rs
crates/oxy-cli/tests/: cli_test.rs
crates/oxy-core/: Cargo.toml
crates/oxy-core/src/: README.md  compiler.rs  errors.rs  lib.rs  symbols.rs  util.rs
crates/oxy-core/src/ast/: README.md  expr.rs  item.rs  mod.rs  pattern.rs  stmt.rs
crates/oxy-core/src/compiler/: expr.rs  helpers.rs  loop_context.rs  mod.rs  path_resolution.rs  pattern.rs  sym_table.rs  visibility.rs
crates/oxy-core/src/diagnostics/: README.md  codes.rs  mod.rs
crates/oxy-core/src/env/: README.md  mod.rs
crates/oxy-core/src/http/: README.md  mod.rs
crates/oxy-core/src/interpreter/: db_dispatch.rs  format.rs  http.rs  json.rs  macros.rs  mod.rs  operations.rs  path.rs  pattern.rs  register.rs  server_dispatch.rs
crates/oxy-core/src/interpreter/eval/: assign.rs  block.rs  call.rs  exprs.rs  stmt.rs
crates/oxy-core/src/interpreter/methods/: binary_heap.rs  char.rs  hashmap.rs  hashset.rs  iterator.rs  mod.rs  numeric.rs  string.rs  vec.rs  vec_deque.rs
crates/oxy-core/src/json/: README.md  mod.rs
crates/oxy-core/src/lexer/: README.md  mod.rs  token.rs
crates/oxy-core/src/package/: mod.rs
crates/oxy-core/src/parser/: README.md  expr.rs  item.rs  mod.rs  pattern.rs  stmt.rs  tests.rs  ty.rs
crates/oxy-core/src/stdlib/: README.md  args.rs  db.rs  env.rs  fs.rs  http.rs  io.rs  json.rs  math.rs  mod.rs  net.rs  path.rs  process.rs  rand.rs  regex.rs  registry.rs  server.rs  time.rs
crates/oxy-core/src/type_checker/: README.md  check_expr.rs  check_item.rs  check_stmt.rs  collect.rs  mod.rs  resolve.rs  tests.rs
crates/oxy-core/src/type_checker/check_expr/: calls.rs  closures.rs  control_flow.rs  data.rs  operators.rs  primary.rs
crates/oxy-core/src/types/: README.md  cmp.rs  display.rs  mod.rs
crates/oxy-core/src/vm/: README.md  api.rs  arith.rs  call.rs  format.rs  interp.rs  mod.rs  scheduler.rs  tests.rs
crates/oxy-core/src/vm/builtins/: README.md  binary_heap.rs  btreemap.rs  btreeset.rs  hashmap.rs  hashset.rs  iterator.rs  mod.rs  numeric.rs  option.rs  option_result.rs  result.rs  string.rs  vec.rs  vec_deque.rs
crates/oxy-core/src/vm/jit/: IR_DESIGN.md  IR_SNAPSHOT_FORMAT.md  IR_TEST_COVERAGE.md  README.md  codegen.rs  context.rs  ffi.rs  ir.rs  ir_snapshot.rs  mod.rs  runtime.rs  translator.rs
crates/oxy-core/src/vm/jit/ffi/: casts.rs  collections.rs  enums.rs  invoke.rs  mod.rs  ops.rs  strings_fmt.rs  structs.rs
crates/oxy-core/src/vm/jit/ir_gen/: README.md  closures.rs  control_flow.rs  expressions.rs  functions.rs  mod.rs  patterns.rs  resolve.rs  statements.rs  tests.rs
crates/oxy-core/tests/: bench_fibonacci.rs  extern_modules.rs  feature_examples.rs  ir_snapshot_tests.rs  jit_interp_parity.rs  leetcode_solutions.rs  server_e2e.rs  symbol_consistency.rs  vm_tests.rs
crates/oxy-core/tests/snapshots/ir/assignment/: assign_field.txt  (+4 more)
crates/oxy-core/tests/vm_tests/: README.md  basics.rs  closures.rs  collections.rs  control_flow.rs  diagnostics.rs  error_handling.rs  functions.rs  main.rs  modules.rs  patterns.rs  reference_syntax.rs  stdlib.rs  strings.rs  structs_enums.rs  traits_generics.rs
crates/oxy-lsp/: Cargo.toml  README.md
crates/oxy-lsp/src/: completions.rs  main.rs  server.rs
crates/oxy-tug/: Cargo.toml  README.md
crates/oxy-tug/src/: cli.rs  install.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  project.rs  runner.rs  scaffold.rs
crates/oxy-tug/tests/: cli_basics.rs  install.rs  lockfile.rs  manifest.rs  project.rs  runner.rs  scaffold.rs
playground/wasm/: Cargo.toml
playground/wasm/src/: lib.rs
playground/wasm/tests/: wasm_smoke.rs
(+437 files in other folders)
