[workspace]
members = ["crates/oxy-core", "crates/oxy-cli", "crates/oxy-lsp", "crates/oxy-tug", "playground/wasm"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/sabinbajracharya/Oxy"

[workspace.dependencies]
oxy-core = { path = "crates/oxy-core" }
thiserror = "2"
colored = "2"
regex = "1"
ureq = "2"
rustyline = "15"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
