[package]
name = "ferrite-cli"
description = "CLI for the Ferrite programming language — REPL and file execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ferrite"
path = "src/main.rs"

[dependencies]
ferrite-core = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
