[package]
name = "ferrite-core"
description = "Core library for the Ferrite programming language — Rust syntax without the borrow checker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
regex = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
