[package]
name = "oxide-cli"
description = "CLI for the Oxide programming language — REPL and file execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "oxide"
path = "src/main.rs"

[dependencies]
oxide-core = { workspace = true }
colored = { workspace = true }
rustyline = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
