[package]
name = "oxide-core"
description = "Core library for the Oxide programming language — Rust syntax without the borrow checker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["http", "db", "server"]
http = ["dep:ureq"]
db = ["dep:rusqlite"]
server = []

[dependencies]
thiserror = { workspace = true }
regex = { workspace = true }
ureq = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
