[package]
name = "oxy-core"
description = "Core library for the Oxy programming language — Rust syntax without the borrow checker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["http", "db", "server"]
http = ["dep:ureq"]
db = ["dep:rusqlite"]
server = []

[dependencies]
thiserror = { workspace = true }
regex = { workspace = true }
ureq = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-module = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-native = { workspace = true }

[dev-dependencies]
