[package]
name = "oxy-lsp"
description = "Language Server Protocol implementation for the Oxy programming language"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "oxy-lsp"
path = "src/main.rs"

[dependencies]
oxy-core = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
